--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,14 @@
 beautifulsoup4==4.11.2
-configobj==5.0.8
-pyaes==1.6.1
-requests~=2.30.0
-
-jinja2==3.1.2
-
-fastapi==0.95.1
-flaskwebgui==1.0.6
-starlette~=0.26.1
-uvicorn~=0.22.0
-sqlalchemy~=1.4.39
-
-itsdangerous==2.1.2
-
+configobj
+pyaes
+requests
+uvicorn[standard]
+jinja2
+fastapi
+flaskwebgui
+starlette
+uvicorn
+sqlalchemy
+itsdangerous
 git+https://github.com/xx025/requests_enhance.git
 git+https://github.com/xx025/yzw-dl.git
